--- a/InforceUrlShortener.API/appsettings.Development.json
+++ b/InforceUrlShortener.API/appsettings.Development.json
@@ -2,10 +2,20 @@
     "ConnectionStrings": {
         "InforceUrlShortenerDb": "Server=(localdb)\\MSSQLLocalDB;Database=InforceUrlShortenerDb;Trusted_Connection=True"
     },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+    "Serilog": {
+        "MinimumLevel": {
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.EntityFrameworkCore": "Information"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "[{Timestamp:dd-MM HH:mm:ss} {Level:u3}] |{SourceContext}| {NewLine}{Message:lj}{NewLine}{Exception}"
+                }
+            }
+        ]
     }
 }
